// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pact pact.splitArrayIntoBatches should split array into array of arrays, where each subarray has a given length limit 1`] = `
Array [
  Array [
    1,
    2,
    3,
    4,
  ],
  Array [
    5,
  ],
]
`;

exports[`pact should handle error when failFast is false 1`] = `
Object {
  "batches": 3,
  "concurrency": 2,
  "results": Array [
    1,
    2,
    "error!",
    4,
    5,
  ],
  "total": 5,
}
`;

exports[`pact should process tasks 1`] = `
Object {
  "batches": 3,
  "concurrency": 2,
  "results": Array [
    1,
    2,
    3,
    4,
    5,
  ],
  "total": 5,
}
`;
